fix: adjust menu positioning for improved alignment and consistency

--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -81,7 +81,7 @@
     width: auto;
     height: 40px;
     justify-content: flex-end;
-    gap: 12px;
+    gap: 22px;
     line-height: 150%;
     user-select: none;
 
